--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.4
   go_router: ^6.5.5
+  http: ^0.13.5
+  syncfusion_flutter_datepicker: ^21.1.39
+  calendar_date_picker2: ^0.5.2
+  dropdown_button2: ^2.0.1
 
 dev_dependencies:
   flutter_test:
